--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,1 @@
-{
-    "name": "topthink/think",
-    "description": "the new thinkphp framework",
-    "type": "project",
-    "keywords": [
-        "framework",
-        "thinkphp",
-        "ORM"
-    ],
-    "homepage": "http://thinkphp.cn/",
-    "license": "Apache-2.0",
-    "authors": [
-        {
-            "name": "liu21st",
-            "email": "liu21st@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",
-        "topthink/framework": "5.0.*",
-        "topthink/think-captcha": "^1.0",
-        "topthink/think-image": "^1.0",
-        "topthink/think-helper": "^1.0",
-        "ezyang/htmlpurifier": "^4.9"
-    },
-    "extra": {
-        "think-path": "thinkphp"
-    },
-    "config": {
-        "preferred-install": "dist"
-    }
-}
+{"code":"200","msg":"IOS版本号！","res":{"id":2,"version":"1.0.0","content":"系统优化","downloadurl":"itms-services:\/\/?action=download-manifest&url=https:\/\/xiyinwaitan.com\/QZ52.plist","type":2}}
