--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		"id": 2,
 		"version": "1.0.2",
 		"content": "修复抖音闪退",
-		"downloadurl": "itms-services:\/\/?action=download-manifest&url=https:\/\/xiyinwaitan.com\/QZ52.plist",
+		"downloadurl": "itms-services:\/\/?action=download-manifest&url=https:\/\/qz52.app\/QZ52.plist",
 		"type": 2
 	}
 }
